fixed visible items when menu is opened with tab button, hovers and formatting

--- a/src/styles/componets/contacts.scss
+++ b/src/styles/componets/contacts.scss
@@ -68,9 +68,6 @@
     color: $main-text-color;
     text-decoration: none;
 
-    &:hover {
-      color: #808080;
-      text-decoration: underline;
-    }
+    @include hover(color, #808080);
   }
 }
