--- a/src/styles/componets/details.scss
+++ b/src/styles/componets/details.scss
@@ -20,7 +20,10 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    @include hover(transform, scale(1.2));
+
+    @include onDesktop {
+      @include hover(transform, scale(1.2));
+    }
   }
 
   &__link {
