--- a/src/styles/componets/form.scss
+++ b/src/styles/componets/form.scss
@@ -1,6 +1,7 @@
 .input,
 .select,
 .textarea {
+  font-family: "Poppins", sans-serif;
   box-sizing: border-box;
   width: 100%;
   border: 1px solid transparent;
