--- a/src/styles/componets/icon.scss
+++ b/src/styles/componets/icon.scss
@@ -4,11 +4,13 @@
   width: 24px;
   background-size: cover;
 
-  @include hover(transform, scale(1.2));
-
   @include onTablet {
     height: 32px;
     width: 32px;
+  }
+
+  @include onDesktop {
+    @include hover(transform, scale(1.2));
   }
 
   &--phone {
