--- a/src/styles/componets/page.scss
+++ b/src/styles/componets/page.scss
@@ -24,14 +24,15 @@
     left: 0;
 
     transition: all 0.3s;
-    opacity: 0;
+    visibility: hidden;
     transform: translateX(-100%);
     pointer-events: none;
+    z-index: 999;
 
     &:target {
-      opacity: 1;
-      transform: translateX(0);
+      visibility: visible;
       pointer-events: all;
+      transform: translateX(0);
     }
   }
 }
