--- a/src/styles/componets/product.scss
+++ b/src/styles/componets/product.scss
@@ -1,7 +1,11 @@
 .product {
   &__link {
     display: grid;
-    @include hover(transform, scale(1.1));
+    justify-content: center;
+
+    @include onDesktop {
+      @include hover(transform, scale(1.1));
+    }
 
     &__photo {
       width: 100%;
