--- a/src/styles/componets/top-bar.scss
+++ b/src/styles/componets/top-bar.scss
@@ -1,8 +1,8 @@
 .top-bar {
-  padding-block: 24px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-block: 24px;
 
   @include onTablet {
     padding-block: 32px;
@@ -20,10 +20,12 @@
   &__logo {
     height: 38px;
 
-    @include hover(transform, scale(1.2));
-
     @include onTablet {
       height: 56px;
+    }
+
+    @include onDesktop {
+      @include hover(transform, scale(1.2));
     }
   }
 }
